<resources>
    <string name="app_name">ContactProject</string>
    <string name="product_id">Product ID</string>
    <string name="not_assigned">Not Assigned</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="delete">Delete</string>
    <string name="incomplete_information">Incomplete Information</string>
    <string name="no_match">No Match</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="textview">TextView</string>
    <string name="patrick_martus">Patrick Martus</string>
    <string name="_999_999_9999">999.999.9999</string>
    <string name="todo">TODO</string>
</resources>